# GeneCode

./: .gitignore  README.md
GStarWars.xcworkspace/: contents.xcworkspacedata
GStarWars.xcworkspace/xcshareddata/: genecode.xccheckout
GStarWarsTOJSON/GStarWarsTOJSON/: main.cpp
GStarWarsTOJSON/GStarWarsTOJSON.xcodeproj/: project.pbxproj
GStarWarsTOJSON/GStarWarsTOJSON.xcodeproj/xcuserdata/alterego4.xcuserdatad/xcschemes/: GStarWarsTOJSON.xcscheme  xcschememanagement.plist
genecode/: CMakeCache.txt  CMakeLists.txt  GLOBAL_CONST.h  Makefile  Shoot.cpp  Shoot.hpp  Weapon.cpp  Weapon.hpp  cmake_install.cmake
genecode/genecode/: Being.cpp  Being.hpp  Engine.cpp  Engine.h  Fleet.cpp  Fleet.h  GaussCannon.cpp  GaussCannon.hpp  Gun.cpp  Gun.h  LaserGun.cpp  LaserGun.h  Shield.cpp  Shield.h  Ship.cpp  Ship.h  ShipBuilder.cpp  ShipBuilder.h  Unit.cpp  Unit.h  gclass.cpp  gclass.h  main.cpp
genecode/genecode.xcodeproj/: project.pbxproj
genecode/genecode.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
